namespace Cayeshni.Domain.Enums;

public enum Currency
{
    USD = 0,
    EUR = 1,
    GBP = 2,
    EGP = 3,
    AED = 4,
    SAR = 5,
    JPY = 6,
    CAD = 7,
    AUD = 8,
    CHF = 9,
    CNY = 10
}
