namespace Cayeshni.Domain.Enums;

public enum FriendshipStatus
{
    Pending = 0,
    Friends = 1,
    Blocked = 2
}