namespace Cayeshni.Domain.Enums;

public enum TransactionCategory
{
    Transport = 0,
    Food = 1,
    Accommodation = 2,
    Entertainment = 3,
    Utilities = 4,
    Shopping = 5,
    Other = 6
}
